--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AL-BADR MRNA IMMO | Construction & Renovation</title>
+<title>AL-BADR MRNA IMMO | Construction & Rénovation</title>
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 <style>
@@ -104,88 +104,90 @@
     <span>AL-BADR MRNA IMMO</span>
   </div>
   <nav>
-    <a href="#home" data-key="home">Home</a>
-    <a href="#about" data-key="about">About</a>
+    <a href="#home" data-key="home">Accueil</a>
+    <a href="#about" data-key="about">À Propos</a>
     <a href="#services" data-key="services">Services</a>
-    <a href="#projects" data-key="projects">Projects</a>
-    <a href="#contact" class="btn" data-key="getQuote">Get a Quote</a>
+    <a href="#projects" data-key="projects">Projets</a>
+    <a href="#contact" class="btn" data-key="getQuote">Demander un devis</a>
   </nav>
 </header>
 
 <section id="home" class="hero">
   <div class="hero-content">
-    <h1 data-key="heroTitle">Building Your Vision</h1>
-    <p data-key="heroDesc">Construction, Renovation & Real Estate Services</p>
+    <img src="logo.png" alt="Logo Center" class="hero-logo">
+    
+    <h1 data-key="heroTitle">Construire Votre Vision</h1>
+    <p data-key="heroDesc">Services de Construction, Rénovation & Immobilier</p>
     <div class="hero-buttons">
-      <a href="#services" class="btn" data-key="services">Our Services</a>
-      <a href="#contact" class="btn btn-outline" data-key="getQuote">Contact Us</a>
+      <a href="#services" class="btn" data-key="services">Nos Services</a>
+      <a href="#contact" class="btn btn-outline" data-key="getQuote">Contactez-nous</a>
     </div>
   </div>
 </section>
 
 <section id="about" class="about">
-  <h2 data-key="about">About Us</h2>
+  <h2 data-key="about">À Propos</h2>
   <p data-key="aboutText">
-    AL-BADR MRNA IMMO is a professional construction, renovation, and real estate company delivering high-quality projects with precision, modern techniques, and full respect of deadlines.
+    AL-BADR MRNA IMMO est une société professionnelle de construction, rénovation et immobilier offrant des projets de haute qualité avec précision, techniques modernes et respect des délais.
   </p>
   <div class="about-stats">
     <div>
       <h3>10+</h3>
-      <span data-key="yearsExp">Years Experience</span>
+      <span data-key="yearsExp">Années d'Expérience</span>
     </div>
     <div>
       <h3>250+</h3>
-      <span data-key="projComp">Projects Completed</span>
+      <span data-key="projComp">Projets Réalisés</span>
     </div>
     <div>
       <h3>100%</h3>
-      <span data-key="clientSat">Client Satisfaction</span>
+      <span data-key="clientSat">Satisfaction Client</span>
     </div>
   </div>
 </section>
 
 <section id="services" class="services">
-  <h2 data-key="services">Our Services</h2>
+  <h2 data-key="services">Nos Services</h2>
   <div class="service-grid">
     <div class="card">
       <i class="fas fa-hard-hat"></i>
       <h3 data-key="serviceConstruction">Construction</h3>
-      <p data-key="serviceConstructionDesc">Residential and commercial building services.</p>
+      <p data-key="serviceConstructionDesc">Services de construction résidentielle et commerciale.</p>
     </div>
     <div class="card">
       <i class="fas fa-tools"></i>
-      <h3 data-key="serviceRenovation">Renovation</h3>
-      <p data-key="serviceRenovationDesc">Modern renovation and remodeling solutions.</p>
+      <h3 data-key="serviceRenovation">Rénovation</h3>
+      <p data-key="serviceRenovationDesc">Solutions modernes de rénovation et de remodelage.</p>
     </div>
     <div class="card">
       <i class="fas fa-paint-roller"></i>
-      <h3 data-key="serviceFinishing">Finishing Works</h3>
-      <p data-key="serviceFinishingDesc">Interior and exterior finishing with premium quality.</p>
+      <h3 data-key="serviceFinishing">Finitions</h3>
+      <p data-key="serviceFinishingDesc">Finitions intérieures et extérieures de qualité premium.</p>
     </div>
     <div class="card">
       <i class="fas fa-bolt"></i>
-      <h3 data-key="serviceElectric">Electricity & Plumbing</h3>
-      <p data-key="serviceElectricDesc">Professional and safe installations.</p>
+      <h3 data-key="serviceElectric">Électricité & Plomberie</h3>
+      <p data-key="serviceElectricDesc">Installations professionnelles et sécurisées.</p>
     </div>
   </div>
 </section>
 
 <section id="projects" class="projects">
-  <h2 data-key="projects">Our Projects</h2>
+  <h2 data-key="projects">Nos Projets</h2>
   <div class="project-grid">
     
     <div class="project-card">
         <div class="image-wrapper">
             <img src="images/villa-after.png" id="img-1" alt="Villa Renovation">
             <button class="toggle-btn" onclick="toggleImage('img-1', 'images/villa-before.png', 'images/villa-after.png', this)">
-                <span data-key="btnBefore">Show Before</span>
+                <span data-key="btnBefore">Voir Avant</span>
             </button>
-            <span class="category-badge" data-key="catRenovation">Renovation</span>
+            <span class="category-badge" data-key="catRenovation">Rénovation</span>
         </div>
         <div class="project-content">
             <div class="project-location"><i class="fas fa-map-marker-alt"></i> Bouskoura, Casablanca</div>
-            <h3 data-key="proj1Title">Luxury Villa Renovation</h3>
-            <p data-key="proj1Desc">Complete transformation of an old villa. We removed load-bearing walls to create an open-plan living space.</p>
+            <h3 data-key="proj1Title">Rénovation Villa de Luxe</h3>
+            <p data-key="proj1Desc">Transformation complète d'une villa ancienne. Suppression des murs porteurs pour créer un espace ouvert.</p>
             <div class="tags">
                 <span class="tag">#Structural</span>
                 <span class="tag">#SmartHome</span>
@@ -196,12 +198,12 @@
     <div class="project-card">
         <div class="image-wrapper">
             <img src="images/apt-finish.png" alt="Apartment Finishing">
-            <span class="category-badge" data-key="catFinishing">Finishing</span>
+            <span class="category-badge" data-key="catFinishing">Finitions</span>
         </div>
         <div class="project-content">
             <div class="project-location"><i class="fas fa-map-marker-alt"></i> Maarif, Casablanca</div>
-            <h3 data-key="proj2Title">Modern Apartment Finishing</h3>
-            <p data-key="proj2Desc">High-end finishing for a 120m² apartment. Included marble flooring, custom gypsum ceilings, and concealed LED lighting.</p>
+            <h3 data-key="proj2Title">Finition Appartement Moderne</h3>
+            <p data-key="proj2Desc">Finition haut de gamme pour un appartement de 120m². Sol en marbre, plafonds en gypse personnalisés et éclairage LED.</p>
             <div class="tags">
                 <span class="tag">#Marble</span>
                 <span class="tag">#Lighting</span>
@@ -215,9 +217,9 @@
             <span class="category-badge" data-key="catConstruction">Construction</span>
         </div>
         <div class="project-content">
-            <div class="project-location"><i class="fas fa-map-marker-alt"></i> Technopolis, Rabat</div>
-            <h3 data-key="proj3Title">Commercial Office Build</h3>
-            <p data-key="proj3Desc">Construction of a 2-story office space optimized for productivity. Soundproof glass partitions and ergonomic layout.</p>
+            <div class="project-location"><i class="fas fa-map-marker-alt"></i> Agdal, Rabat</div>
+            <h3 data-key="proj3Title">Construction Bureau Commercial</h3>
+            <p data-key="proj3Desc">Construction d'un espace de bureau sur 2 étages. Cloisons en verre insonorisées et aménagement ergonomique.</p>
             <div class="tags">
                 <span class="tag">#Office</span>
                 <span class="tag">#GlassWork</span>
@@ -229,19 +231,19 @@
 </section>
 
 <section id="contact" class="contact">
-  <h2 data-key="contact">Contact Us</h2>
+  <h2 data-key="contact">Contactez-nous</h2>
   <form id="contactForm" action="https://formspree.io/f/xbdrqpke" method="POST">
-    <input type="text" name="name" placeholder="Your Name" data-key="formName" required />
-    <input type="email" name="email" placeholder="Email Address" data-key="formEmail" required />
-    <input type="tel" name="phone" placeholder="Phone Number" data-key="formPhone" />
-    <textarea name="message" placeholder="Your Message" data-key="formMessage" required></textarea>
-    <button type="submit" class="btn" data-key="formSubmit">Send Message</button>
+    <input type="text" name="name" placeholder="Votre Nom" data-key="formName" required />
+    <input type="email" name="email" placeholder="Adresse Email" data-key="formEmail" required />
+    <input type="tel" name="phone" placeholder="Numéro de Téléphone" data-key="formPhone" />
+    <textarea name="message" placeholder="Votre Message" data-key="formMessage" required></textarea>
+    <button type="submit" class="btn" data-key="formSubmit">Envoyer le message</button>
   </form>
 
   <div class="contact-social">
     <a href="https://www.instagram.com/societe_aaboubou_immobilier/?hl=fr" target="_blank" class="social-btn">
       <i class="fab fa-instagram"></i>
-      <span>Follow us on Instagram</span>
+      <span>Suivez-nous sur Instagram</span>
     </a>
   </div>
 </section>
@@ -258,7 +260,7 @@
   </div>
 </footer>
 
-<a href="https://wa.me/212699215556?text=Hello%2C%20I%20would%20like%20a%20quote." class="whatsapp" target="_blank">
+<a href="https://wa.me/212699215556?text=Bonjour%2C%20je%20voudrais%20un%20devis." class="whatsapp" target="_blank">
   <i class="fab fa-whatsapp"></i>
 </a>
 
@@ -268,7 +270,7 @@
     <div class="langOption" data-lang="fr">Français</div>
     <div class="langOption" data-lang="ar">العربية</div>
   </div>
-  <div class="langButton" id="langButton">English</div>
+  <div class="langButton" id="langButton">Français</div>
 </div>
 
 <script>
@@ -277,7 +279,7 @@ let isBefore = false;
 function toggleImage(imgId, beforeSrc, afterSrc, btn) {
     const img = document.getElementById(imgId);
     const span = btn.querySelector('span');
-    const currentLang = document.documentElement.lang || 'en'; 
+    const currentLang = document.documentElement.lang || 'fr'; 
     const txtBefore = translations[currentLang].btnBefore;
     const txtAfter = translations[currentLang].btnAfter;
 
@@ -375,8 +377,8 @@ function setLanguage(lang){
   else{ document.body.dir="ltr"; document.body.style.textAlign="left"; }
 }
 
-// Default English
-setLanguage("en");
+// Default French
+setLanguage("fr");
 
 // Smooth scroll
 document.querySelectorAll("a[href^='#']").forEach(link=>{
@@ -393,9 +395,9 @@ contactForm.addEventListener("submit", async function(e){
   const formData=new FormData(contactForm);
   try{
     const response=await fetch(contactForm.action,{method:"POST",body:formData,headers:{"Accept":"application/json"}});
-    if(response.ok){ alert("✅ Your message has been sent!"); contactForm.reset(); }
-    else alert("⚠️ Something went wrong.");
-  } catch { alert("⚠️ Submission error."); }
+    if(response.ok){ alert("✅ Votre message a été envoyé!"); contactForm.reset(); }
+    else alert("⚠️ Une erreur s'est produite.");
+  } catch { alert("⚠️ Erreur d'envoi."); }
 });
 </script>
 
