--- a/index.html
+++ b/index.html
@@ -1,121 +1,38 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>AL-BADR MRNA IMMO | Construction & Rénovation</title>
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-<style>
-/* Floating Elements Styles */
-#langWrapper {
-  position: fixed;
-  bottom: 90px;
-  right: 20px;
-  z-index: 1002;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  gap: 10px;
-}
-
-.langButton {
-  background: #000;
-  color: gold;
-  border-radius: 30px;
-  padding: 10px 15px;
-  cursor: pointer;
-  font-weight: bold;
-  border: 1px solid gold;
-  box-shadow: 0 0 10px rgba(255,215,0,0.3);
-  transition: 0.3s;
-}
-
-.langButton:hover { transform: scale(1.05); background: gold; color: black; }
-
-.langOptions {
-  display: none;
-  flex-direction: column;
-  gap: 10px;
-  margin-bottom: 10px;
-}
-
-.langOption {
-  background: #111;
-  color: white;
-  border: 1px solid #333;
-  border-radius: 30px;
-  padding: 8px 15px;
-  cursor: pointer;
-  font-size: 0.9rem;
-  transition: 0.3s;
-}
-
-.langOption:hover { border-color: gold; color: gold; }
-
-/* Black & Gold WhatsApp Button */
-.whatsapp {
-  position: fixed;
-  bottom: 20px;
-  right: 20px;
-  background: #000;
-  color: gold;
-  border: 2px solid gold;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 32px;
-  box-shadow: 0 4px 15px rgba(255, 215, 0, 0.4);
-  transition: all 0.3s ease;
-  z-index: 999;
-}
-
-.whatsapp:hover {
-  background: gold;
-  color: #000;
-  transform: scale(1.1) rotate(10deg);
-  box-shadow: 0 6px 25px rgba(255, 215, 0, 0.6);
-}
-
-/* Mobile Adjustments for Floating Buttons */
-@media screen and (max-width: 768px) {
-    .whatsapp {
-        width: 50px;
-        height: 50px;
-        font-size: 24px;
-        bottom: 15px;
-        right: 15px;
-    }
-    #langWrapper {
-        bottom: 75px;
-        right: 15px;
-    }
-}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AL-BADR MRNA IMMO | Construction & Rénovation</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
 <header class="navbar">
-  <div class="logo">
-    <img src="logo.png" alt="AL-BADR" onerror="this.style.display='none'">
-    <span>AL-BADR MRNA IMMO</span>
-  </div>
-  <nav>
-    <a href="#home" data-key="home">Accueil</a>
-    <a href="#about" data-key="about">À Propos</a>
-    <a href="#services" data-key="services">Services</a>
-    <a href="#projects" data-key="projects">Projets</a>
-    <a href="#contact" class="btn" data-key="getQuote">Demander un devis</a>
-  </nav>
+    <div class="logo">
+        <img src="logo.png" alt="AL-BADR" onerror="this.style.display='none'">
+        <span>AL-BADR MRNA IMMO</span>
+    </div>
+    
+    <div class="menu-toggle" id="mobile-menu">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
+    <nav class="nav-links">
+        <a href="#home" data-key="home">Accueil</a>
+        <a href="#about" data-key="about">À Propos</a>
+        <a href="#services" data-key="services">Services</a>
+        <a href="#projects" data-key="projects">Projets</a>
+        <a href="#contact" class="btn" data-key="getQuote">Demander un devis</a>
+    </nav>
 </header>
 
 <section id="home" class="hero">
   <div class="hero-content">
     <img src="logo.png" alt="Logo Center" class="hero-logo">
-    
     <h1 data-key="heroTitle">Construire Votre Vision</h1>
     <p data-key="heroDesc">Services de Construction, Rénovation & Immobilier</p>
     <div class="hero-buttons">
@@ -250,14 +167,8 @@
 
 <footer>
   <p>© 2025 AL-BADR MRNA IMMO — All Rights Reserved</p>
-  
-  <div class="legal-info">
-      RC: 123456 • ICE: 001234567890000 • PATENTE: 98765432
-  </div>
-
-  <div class="creator-credit">
-      Created by <span>Ilyass Rakas</span>
-  </div>
+  <div class="legal-info">RC: 123456 • ICE: 001234567890000 • PATENTE: 98765432</div>
+  <div class="creator-credit">Created by <span>Ilyass Rakas</span></div>
 </footer>
 
 <a href="https://wa.me/212699215556?text=Bonjour%2C%20je%20voudrais%20un%20devis." class="whatsapp" target="_blank">
@@ -274,7 +185,22 @@
 </div>
 
 <script>
-// Image Toggle Logic
+/* 1. MOBILE MENU TOGGLE */
+const menuToggle = document.getElementById('mobile-menu');
+const navLinks = document.querySelector('.nav-links');
+
+menuToggle.addEventListener('click', () => {
+    navLinks.classList.toggle('active');
+});
+
+// Close menu when clicking a link
+document.querySelectorAll('.nav-links a').forEach(link => {
+    link.addEventListener('click', () => {
+        navLinks.classList.remove('active');
+    });
+});
+
+/* 2. IMAGE TOGGLE LOGIC */
 let isBefore = false;
 function toggleImage(imgId, beforeSrc, afterSrc, btn) {
     const img = document.getElementById(imgId);
@@ -294,7 +220,7 @@ function toggleImage(imgId, beforeSrc, afterSrc, btn) {
     }
 }
 
-// Translations Data
+/* 3. TRANSLATIONS DATA */
 const translations = {
   en:{
       home:"Home", about:"About Us", services:"Our Services", projects:"Our Projects", contact:"Contact Us", getQuote:"Get a Quote",
@@ -346,14 +272,12 @@ const translations = {
   }
 };
 
-// Elements
+/* 4. LANGUAGE SWITCHER LOGIC */
 const langButton = document.getElementById("langButton");
 const langOptions = document.getElementById("langOptions");
 
-// Toggle options
 langButton.addEventListener("click", ()=>langOptions.style.display = langOptions.style.display==="flex"?"none":"flex");
 
-// Change language
 document.querySelectorAll(".langOption").forEach(opt=>{
   opt.addEventListener("click", ()=>{
     const lang = opt.getAttribute("data-lang");
@@ -364,7 +288,6 @@ document.querySelectorAll(".langOption").forEach(opt=>{
   });
 });
 
-// Apply language
 function setLanguage(lang){
   document.querySelectorAll("[data-key]").forEach(el=>{
     const key = el.getAttribute("data-key");
@@ -374,21 +297,20 @@ function setLanguage(lang){
     }
   });
   if(lang==="ar"){ document.body.dir="rtl"; document.body.style.textAlign="right"; }
-  else{ document.body.dir="ltr"; document.body.style.textAlign="left"; }
+  else { document.body.dir="ltr"; document.body.style.textAlign="left"; }
 }
-
-// Default French
 setLanguage("fr");
 
-// Smooth scroll
+/* 5. SMOOTH SCROLL */
 document.querySelectorAll("a[href^='#']").forEach(link=>{
   link.addEventListener("click", e=>{
     e.preventDefault();
-    document.querySelector(link.getAttribute("href")).scrollIntoView({behavior:"smooth"});
+    const target = document.querySelector(link.getAttribute("href"));
+    if(target) target.scrollIntoView({behavior:"smooth"});
   });
 });
 
-// Formspree submission
+/* 6. FORMSPREE LOGIC */
 const contactForm=document.getElementById("contactForm");
 contactForm.addEventListener("submit", async function(e){
   e.preventDefault();
@@ -400,6 +322,5 @@ contactForm.addEventListener("submit", async function(e){
   } catch { alert("⚠️ Erreur d'envoi."); }
 });
 </script>
-
 </body>
 </html>
