--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AL-BADR MRNA IMMO | Construction & Rénovation</title>
+    
+    <link rel="icon" href="logo.png" type="image/png">
+
+    <meta name="description" content="AL-BADR MRNA IMMO: Expert en construction, rénovation et finition de villas, appartements et bureaux au Maroc (Casablanca, Rabat). Devis gratuit.">
+    <meta name="keywords" content="construction maroc, rénovation casablanca, finition appartement, construction villa, travaux rénovation, aménagement bureau, al-badr mrna immo, architecture maroc">
+    <meta name="author" content="AL-BADR MRNA IMMO">
+
+    <meta property="og:title" content="AL-BADR MRNA IMMO | Construction & Rénovation">
+    <meta property="og:description" content="Transformez votre espace avec nos services de construction et rénovation de haute qualité au Maroc.">
+    <meta property="og:image" content="logo.png">
+    <meta property="og:url" content="https://albadr-mrna.vercel.app/">
+
     <link rel="stylesheet" href="style.css">
+    
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
