--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
             <p data-key="proj1Desc">Rénovation complète d'une villa à Bouskoura. Modernisation de la façade, réaménagement intérieur et piscine.</p>
         </div>
     </div>
+
     <div class="project-card">
         <div class="image-wrapper">
             <img src="images/apt-finish.png" alt="Apartment">
@@ -87,6 +88,7 @@
             <p data-key="proj2Desc">Finition haut de gamme pour un appartement de 120m² au quartier Maarif. Peinture, carrelage et menuiserie sur mesure.</p>
         </div>
     </div>
+
     <div class="project-card">
         <div class="image-wrapper">
             <img src="images/office-main.png" alt="Office">
@@ -103,12 +105,27 @@
 
 <section id="gallery" class="projects" style="background: #111; border-top: 1px solid #222;">
   <h2 style="color: gold; text-align: center; margin-bottom: 40px; font-size: 32px; text-transform: uppercase; letter-spacing: 1px;">
-      Galerie Récente
+      Galerie
   </h2>
-  <div class="project-grid" id="dynamic-gallery-grid" style="min-height: 100px;">
-      <p style="text-align:center; color:#666; width:100%;">Chargement...</p>
+  <div class="project-grid">
+      <div class="project-card">
+          <div class="image-wrapper" style="height: 300px;">
+              <img src="images/villa-after.png" alt="Projet" style="width:100%; height:100%; object-fit:cover;">
+          </div>
+      </div>
+      <div class="project-card">
+          <div class="image-wrapper" style="height: 300px;">
+              <img src="images/apt-finish.png" alt="Projet" style="width:100%; height:100%; object-fit:cover;">
+          </div>
+      </div>
+      <div class="project-card">
+          <div class="image-wrapper" style="height: 300px;">
+              <img src="images/office-main.png" alt="Projet" style="width:100%; height:100%; object-fit:cover;">
+          </div>
+      </div>
   </div>
 </section>
+
 <section id="testimonials" class="testimonials">
   <h2 data-key="testimonialsTitle">Ce que disent nos clients</h2>
   <div class="testimonial-grid">
